tests/security/taintedCookie/output.txt
ERROR: TaintedData - input.hack:1:27 - Data from a URL query string found its way to a cookie